fnlogin.in: Fortiweb 5.8 changed password prompt
http://www.shrubbery.net/pipermail/rancid-discuss/2017-July/009760.html

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,6 @@
 3.99.99
+	fnlogin.in: Fortiweb 5.8 changed password prompt
+
 	acos.pm: show aflex is not be supported in the CGN/LSN image
 
 	wlogin: support -S
