waveserver.pm: adjust prompt for the case where a ^ appears in the prompt after displaying the config.
eg:
!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
! END OF CONFIG:
!
hostname1^>logout
SHELL PARSER FAILURE: 'logout' - no matching entry found
hostname1> exit

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,7 @@
 3.99.99
+	waveserver.pm: adjust prompt for the case where a ^ appears in the
+	prompt after displaying the config.
+
 	waveserver.pm: prompt could be # or >, depending on access level -
 	Chris Wopat tested
 
