--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,7 @@
 3.99.99
+	iosxr.pm: recognize another possible intermittent failure in show
+	install active
+
 	fnrancid: filter cluster uptime
 
 	waveserver.pm: adjust prompt for the case where a ^ appears in the
