--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,6 @@
 3.99.99
+	sros.pm: move show chassis power-supply o/p - Greg Hankins
+
 	ciscowlc.pm: filter rogue client Unknowns - Bill Fenner
 
 	junos.pm: filter scale-subscriber license counters
