--- a/man/router.db.5
+++ b/man/router.db.5
@@ -1,6 +1,6 @@
 .\"
 .hys 50
-.TH "router.db" "5" "10 January 2017"
+.TH "router.db" "5" "22 November 2017"
 .SH NAME
 router.db \- rancid group configuration file
 .SH DESCRIPTION
@@ -121,6 +121,10 @@ device type.
 .ID 15n
 .B erx
 A Juniper E-series edge router.
+.TP
+.ID 15n
+.B fss
+A Fujitsu FSS/1finity device.
 .TP
 .ID 15n
 .B dell
