aeos.pm: handle new power supply output format
Change from

System temperature status is: Ok
                                                                Alert   Critical
Sensor  Description                            Temperature  Threshold  Threshold
------- ------------------------------------ ------------- ---------- ----------
1       Cpu temp sensor                            42.986C       105C       115C
2       Front internal sensor                      35.000C        75C        85C
3       Front external sensor                      36.000C        60C        75C
4       Rear internal sensor                       29.000C        75C        85C
5       Rear external sensor                       26.000C        60C        75C
6       Switch ASIC Center                         50.389C       100C       110C
7       Switch ASIC Lower Left Corner              50.931C       100C       110C
8       Switch ASIC Upper Right Edge               49.846C       100C       110C

System cooling status is: Ok
Ambient temperature: 26C
Airflow: back-to-front
Fan              Status          Configured Speed     Actual Speed
---------------- --------------- ---------------- ----------------
1/1              Ok                           42%              41%
2/1              Ok                           42%              42%

Power                                  Input    Output   Output
Supply  Model                Capacity  Current  Current  Power    Status
------- -------------------- --------- -------- -------- -------- -------------
1       PWR-00194-01               65W      N/A      N/A      N/A Ok
2       PWR-00194-01               65W      N/A      N/A      N/A Ok
Total   --                        130W       --       --  Unknown --

to

System temperature status is: Ok
                                                                 Alert  Critical
                                               Temp    Setpoint  Limit     Limit
Sensor  Description                          

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,6 @@
 3.99.99
+	aeos.pm: handle new power supply output format
+
 	fss.pm, et al: add Fujitsu FSS/1finity support
 
 	ulogin: fix regex typo for skipping last login msg in login sequence
