Fujitsu FSS should have been FSS2

--- a/CHANGES
+++ b/CHANGES
@@ -1,7 +1,7 @@
 3.99.99
 	aeos.pm: handle new power supply output format
 
-	fss.pm, et al: add Fujitsu FSS/1finity support
+	fss2.pm, et al: add Fujitsu FSS2/1finity support
 
 	ulogin: fix regex typo for skipping last login msg in login sequence
 
