--- a/rancid/CHANGES
+++ b/rancid/CHANGES
@@ -1,4 +1,8 @@
 3.99.99
+	clogin: add tty settings when a real tty doesnt exist; hoping this will
+	help with the long command problem on ASA devices that I have not been
+	able to replicate on ASAs I can access
+
 	rancid.conf.sample: move UID check after setting PATH
 
 	aeos.pm: handle new power supply output format
