--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,6 @@
 3.99.99
+	ulogin: trim match of "last login:" for timing reasons
+
 	nx.pm: filter debug_logs/ in flash output - Charles T. Brooks
 
 	rancid.conf:  add check for docker environment where the root user check
