hrancid: filter timestamp bug in show tech transceivers
eg:
device> show tech transceivers
transceivers
Transceiver: 
Port # | Type      | Prod #     | Serial #         | Part #   
-------+-----------+------------+------------------+----------
A21    | SFP+SR    |     J9150A | ZZDH2553         | 1990-3882 
show time
Thu Dec 21 14:00:55 2017

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,6 @@
 3.99.99
+	hrancid: filter timestamp bug in show tech transceivers
+
 	nxos.pm: filter show redundancy/show env fex when unsupported
 
 	iosxr.pm: filter .python-history flash file & non-existent paths/devs
