--- a/rancid/CHANGES
+++ b/rancid/CHANGES
@@ -134,7 +134,7 @@
 
 	nxos.pm: drop bootvar_debug.* log files reported on the ML
 
-	hpuitfilter: add 3 CR replacements, fixing hp5412 J8697A or hp5406 and
+	hpuifilter: add 3 CR replacements, fixing hp5412 J8697A or hp5406 and
 	HP/Aruab-2920 switches running WB_16_03_0004 - Kalani Sanders
 
 	arbor.pm: force a terminal type so as not to confuse the PoS with
