--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,6 @@
 3.99.99
+	vrp.pm: add filesystem filters
+
 	vrp.pm: add Hauwei VRP support - very much alpha quality ATM
 
 	xilogin: few change to support Hauwei VRP
