--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,6 @@
 3.99.99
+	vrp.pm: drop file number in filesystem filters
+
 	vrp.pm: add filesystem filters
 
 	vrp.pm: add Hauwei VRP support - very much alpha quality ATM
