--- a/rancid/CHANGES
+++ b/rancid/CHANGES
@@ -1,4 +1,6 @@
 3.99.99
+	fnlogin: handle empty command index in run_commands()
+
 	fnlogin: fix escaping of '$' in full prompt matching
 
 	iosxr.pm: filter date/size of cisco_support file
