--- a/rancid/CHANGES
+++ b/rancid/CHANGES
@@ -1,4 +1,6 @@
 3.99.99
+	ios.pm: filter date/size of underlying-config file
+
 	fnlogin: handle empty command index in run_commands()
 
 	fnlogin: fix escaping of '$' in full prompt matching
