--- a/rancid/CHANGES
+++ b/rancid/CHANGES
@@ -1,4 +1,6 @@
 3.99.99
+	sros: filter change since last save line
+
 	clogin: add clause to recognize F5 >=11 "exit" command error msg
 
 	rancid.type.base: add bigip13 for >=13.x -  Howard Jones
