--- a/rancid/CHANGES
+++ b/rancid/CHANGES
@@ -1,4 +1,6 @@
 3.99.99
+	ciscowlc: skip new oscillating o/p for WLC 8.8 - Reuden Farrelly
+
 	ciscowlc: fix logout match, like ASA, it missed the CR sometimes
 
 	fxlogin, fxos: initial FX-OS support - thanks Erik Muller
