nxos.pm: ShowEnv() missing prompt handling & CR filter - Frank Mogaddedi

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,6 @@
 3.99.99
+	nxos.pm: ShowEnv() missing prompt handling & CR filter - Frank Mogaddedi
+
 	ios.pm, iosxr.pm: re-organize the DirSlotN() filtering a bit toward
 	reducing fluctuations
 
