ulogin: parse (ignore) last (failed) login message at login time

--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,6 @@
+3.99.99
+	ulogin: parse (ignore) last (failed) login message at login time
+
 3.8
 	nxos.pm: ShowEnv() missing prompt handling & CR filter - Frank Mogaddedi
 
