--- a/rancid/CHANGES
+++ b/rancid/CHANGES
@@ -1,5 +1,5 @@
 3.99.99
-	fnlogin: filter db version stamps - Chris Wopat
+	fnrancid: filter db version stamps wrapped in FILTER_OSC - Chris Wopat
 
 	ulogin: parse (ignore) last (failed) login message at login time
 
