--- a/CHANGES
+++ b/CHANGES
@@ -1,7 +1,7 @@
 3.99.99
 	anlogin: copy last/failed login match from clogin
 
-	nx.pm: also ignore accounting_log.0 - Pavel Korovin
+	nxos.pm: also ignore accounting_log.0 - Pavel Korovin
 
 	srancid: prevent ShowSys() power supply handling from consuming too much
 
