--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,6 @@
 3.99.99
+	arcos.pm: initial arcos support - WIP
+
 	anlogin: copy last/failed login match from clogin
 
 	nxos.pm: also ignore accounting_log.0 - Pavel Korovin
