--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,6 @@
 3.99.99
+	arbor.pm: increate anlogin timeout for slow cli commands
+
 	noklogin: allocate a pty if not on a tty & set term width
 
 	iosxr: DirSlotN(): drop fileno from oscillating files to ignore the
