--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,6 @@
 3.99.99
+	nxos.pm: GC unused variables
+
 	fortigate: rename fortigate device type to fortigate-full and re-create
 	the fortigate type with 'show' (not 'full-configuration')
 
