ciscowlc.pm: the device may not echo the \r\n at logout http://www.shrubbery.net/pipermail/rancid-discuss/2018-October/010421.html

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,6 @@
 3.99.99
+	ciscowlc.pm: the device may not echo the \r\n at logout
+
 	fss2: filter sys-uptime
 
 	anlogin, jlogin, noklogin: use spawnopts spawning ssh/telnet
