--- a/rancid/CHANGES
+++ b/rancid/CHANGES
@@ -1,4 +1,6 @@
 3.99.99
+	fnlogin: accept new banner prompt at login = Ni Ne
+
 	ciscowlc.pm: the device may not echo the \r\n at logout
 
 	fss2: filter sys-uptime
