--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,5 @@
 3.99.99
-	fnlogin: accept new banner prompt at login = Ni Ne
+	fnlogin: accept new banner prompt at login - Ni Ne
 
 	ciscowlc.pm: the device may not echo the \r\n at logout
 
