--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,6 @@
 3.99.99
+	panlogin: copy/customize last/failed login match from clogin
+
 	fnlogin: accept new banner prompt at login - Ni Ne
 
 	ciscowlc.pm: the device may not echo the \r\n at logout
